--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="todoEnter">
             <input type="text">
             <label for="priority">Priority</label>
-            <select name="cars" id="priority">
+            <select name="prio" id="priority">
                 <option value="high">High</option>
                 <option value="medium">Medium</option>
                 <option value="low">Low</option>
