--- a/index.html
+++ b/index.html
@@ -4,30 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>todoAPP</title>
 </head>
 <body>
-    
+    <img id="backgroundimg" src="" alt="">
     <div class="container">
         <div class="image">
             <img src="https://w7.pngwing.com/pngs/972/511/png-transparent-todo-sketch-note-list-tasks-thumbnail.png" alt="">
         </div>
         <h1>To-Do App</h1>
         <div class="todoEnter">
-            <input type="text">
+            <input type="text" required>
             <label for="priority">Priority</label>
             <select name="prio" id="priority">
                 <option value="high">High</option>
                 <option value="medium">Medium</option>
                 <option value="low">Low</option>
             </select>
-            <button>Add Todo</button>
+            <button id="addButton">Add Todo</button>
         </div>
         <div class="todos">
             <div class="todo">
                 <p>todo</p>
-                <p>high</p>
-                <button>delete</button>
+                <p id="highprio">high</p>
+                <button class="removing">delete</button>
             </div>
         </div>
     </div>
@@ -35,8 +36,8 @@
 
 
     
-    <script src="todo.js">
-
-    </script>
+    <script src="todo.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
 </html>
